Update index.html and added copy coide an panel

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <h1 class="iptxt">
                 Ваш айпи:
             </h1>
-            <input class="iptxt paneltxt" value="Erillamc.online" readonly>
+            <input class="iptxt paneltxt" value="Erillamc.online" readonly onclick="CopyIP()">
             <button class="iptxt buttoncopy" onclick="CopyIP()">
                 Скопировать
             </button>
