--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
         </div>
         <div class="i2m">
             <h1 class="crossplate">Уникальная кроссплатформеность</h1>
-            <h2 class="upper">--------------------------------------------------</h2>
+            <button class="animbtn txt" onclick="Telegram()">
+                Наш телеграм
+            </button>
         </div>
         <div class="ip" id="ip">
             <button class="exit iptxt buttonexit" onclick="HideDiv()">
